增加系统判断以及软件安装判断